tdf#168375 return false if both KEY_MOD1 and KEY_MOD2 are pressed

Previously ImpEditEngine::IsSimpleCharInput() returned false only
if one of these modifiers is pressed. At least on macOS, pressing
Command-Option with a character is not a simple character so return
false if both modifiers are pressed.

Change-Id: I7698a1ec3178b83c0a1d4e161915246cac08f0ee
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191205
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit ed45cdaef3d2807d0b9d6a4c08da375fc72024a6)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191210
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
Tested-by: Michael Weghorn <m.weghorn@posteo.de>
Reviewed-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>